print all changed files